--- a/ProyectoPelicula/src/main/resources/templates/error.html
+++ b/ProyectoPelicula/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Alumnes</title>
+    <title>Peliculas</title>
 </head>
 <body>
 401 NOT FOUND
