--- a/ProyectoPelicula/src/main/resources/templates/peliculas/peliAgregada.html
+++ b/ProyectoPelicula/src/main/resources/templates/peliculas/peliAgregada.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Peliculas</title>
-</head>
-<body>
- Pelicula <span th:text="${peliAfegida.titol}" /> añadida</p>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Peliculas</title>-->
+<!--</head>-->
+<!--<body>-->
+<!-- Pelicula <span th:text="${peliAfegida.titol}" /> añadida</p>-->
+<!--</body>-->
+<!--</html>-->
